[package]
description = "Rust nightly cargo command to report which SIMD extensions your Intel/AMD CPU supports and are enabled."
name = "cargo-simd-detect"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CarlKCarlK/cargo-simd-detect"
readme = "README.md"
authors = ["Carl Kadie"]
license = "MIT OR Apache-2.0"
keywords = ["simd", "cargo", "subcommand"]
categories = [
    "development-tools::profiling",
    "development-tools::cargo-plugins",
]
homepage = "https://github.com/CarlKCarlK/cargo-simd-detect"


[dependencies]
